cmake_minimum_required(VERSION 3.16)

add_library(dominium_game STATIC
    dominium_game_stub.c
    rule/dom_interest_set.c
    rule/dom_interest_sources.c
    rule/dom_interest_macro.c
    rule/dom_fidelity.c
    rule/dom_data_validate.c
    rule/dom_epistemic.c
    rule/ups_runtime.cpp
    rule/execution/access_ir.cpp
    rule/execution/work_ir_emit.cpp
    rule/execution/policy_bridge.cpp
    rule/execution/system_registry.cpp
    rule/execution/work_graph_builder.cpp
    law/law_kernel.cpp
    law/jurisdiction_resolver.cpp
    law/law_context_builder.cpp
    domain/life/ability_packages.cpp
    domain/life/control_authority.cpp
    domain/life/continuation_policy.cpp
    domain/life/controller_binding.cpp
    domain/life/life_events_stub.cpp
    domain/life/life_refusal_codes.cpp
    domain/life/death_event.cpp
    domain/life/estate.cpp
    domain/life/inheritance_scheduler.cpp
    domain/life/life_audit_log.cpp
    domain/life/death_pipeline.cpp
    domain/life/death_scene_observation_hooks.cpp
    domain/life/remains.cpp
    domain/life/remains_decay_scheduler.cpp
    domain/life/rights_post_death.cpp
    domain/life/salvage.cpp
    domain/life/birth_refusal_codes.cpp
    domain/life/birth_event.cpp
    domain/life/gestation_state.cpp
    domain/life/lineage.cpp
    domain/life/cohort_update_hooks.cpp
    domain/life/birth_pipeline.cpp
    rule/orchestration/macro_due_scheduler_hooks.cpp
    ${CMAKE_SOURCE_DIR}/runtime/shell/session/mp0_session.cpp
    domain/agent/agent_goal.cpp
    domain/agent/agent_evaluator.cpp
    domain/agent/agent_planner.cpp
    domain/agent/agent_schedule.cpp
    domain/agent/agent_belief_update.cpp
    domain/agent/agent_institution.cpp
    domain/agent/agent_authority.cpp
    domain/agent/agent_constraint.cpp
    domain/agent/agent_contract.cpp
    domain/agent/agent_conflict.cpp
    domain/agent/agent_history_macro.cpp
    domain/agent/doctrine.cpp
    domain/agent/agent_role.cpp
    domain/agent/delegation.cpp
    domain/agent/doctrine_scheduler.cpp
    domain/agent/aggregate_beliefs.cpp
    domain/agent/aggregate_goals.cpp
    domain/agent/agent_aggregate.cpp
    domain/agent/agent_refinement.cpp
    domain/agent/agent_collapse.cpp
    domain/agent/agent_planning_tasks.cpp
    domain/agent/agent_doctrine_tasks.cpp
    domain/agent/agent_aggregation_tasks.cpp
    domain/agent/agent_system.cpp
    domain/physics/physical_audit.cpp
    domain/physics/field_storage.cpp
    domain/physics/local_processes.cpp
    domain/physics/terrain_processes.cpp
    domain/physics/resource_processes.cpp
    domain/physics/parts_and_assemblies.cpp
    domain/physics/construction_processes.cpp
    domain/physics/network_graph.cpp
    domain/physics/machine_ops.cpp
    domain/physics/infrastructure_effects.cpp
    domain/fabrication/fab_interpreters.cpp
    domain/player/player_intent.cpp
    ${CMAKE_SOURCE_DIR}/runtime/package/mod/mod_manifest.cpp
    ${CMAKE_SOURCE_DIR}/runtime/package/mod/mod_graph_resolver.cpp
    ${CMAKE_SOURCE_DIR}/runtime/package/mod/mod_compat.cpp
    ${CMAKE_SOURCE_DIR}/runtime/package/mod/mod_safe_mode.cpp
    ${CMAKE_SOURCE_DIR}/runtime/package/mod/mod_loader.cpp
    domain/governance/jurisdiction_model.cpp
    domain/governance/legitimacy_model.cpp
    domain/governance/enforcement_capacity.cpp
    domain/governance/policy_model.cpp
    domain/governance/policy_scheduler.cpp
    domain/governance/org_governance_binding.cpp
    domain/governance/legitimacy_tasks.cpp
    domain/governance/governance_system.cpp
    domain/knowledge/knowledge_refusal_codes.cpp
    domain/knowledge/knowledge_item.cpp
    domain/knowledge/institution_knowledge_binding.cpp
    domain/knowledge/secrecy_controls.cpp
    domain/knowledge/research_process.cpp
    domain/knowledge/diffusion_model.cpp
    domain/technology/tech_prerequisites.cpp
    domain/technology/tech_effects.cpp
    domain/technology/tech_activation.cpp
    domain/scale/scale_domains.cpp
    domain/scale/scale_collapse_expand.cpp
    domain/scale/domain_transitions.cpp
    domain/scale/interplanetary_logistics.cpp
    domain/scale/interstellar_logistics.cpp
    domain/scale/scale_time_warp.cpp
    domain/scale/scale_interest_binding.cpp
    domain/scale/relevance_transitions.cpp
    domain/scale/interest_system.cpp
    domain/scale/world_streaming_system.cpp
    domain/scale/visitability_system.cpp
    domain/city/city_refusal_codes.cpp
    domain/city/city_model.cpp
    domain/city/zoning_rules.cpp
    domain/city/city_services_stub.cpp
    domain/infrastructure/store_model.cpp
    domain/infrastructure/maintenance_model.cpp
    domain/infrastructure/production_chain.cpp
    domain/infrastructure/building_machine.cpp
    domain/infrastructure/machine_scheduler.cpp
    domain/economy/ledger_tasks.cpp
    domain/economy/economy_system.cpp
    domain/logistics/transport_capacity.cpp
    domain/logistics/routing_stub.cpp
    domain/logistics/logistics_flow.cpp
    domain/war/security_force.cpp
    domain/war/military_cohort.cpp
    domain/war/readiness_state.cpp
    domain/war/morale_state.cpp
    domain/war/mobilization_pipeline.cpp
    domain/war/demobilization_pipeline.cpp
    domain/war/engagement.cpp
    domain/war/engagement_resolution.cpp
    domain/war/engagement_scheduler.cpp
    domain/war/casualty_generator.cpp
    domain/war/loss_accounting.cpp
    domain/war/territory_control.cpp
    domain/war/occupation_state.cpp
    domain/war/resistance_state.cpp
    domain/war/resistance_scheduler.cpp
    domain/war/disruption_effects.cpp
    domain/war/pacification_policies.cpp
    domain/war/route_control.cpp
    domain/war/blockade.cpp
    domain/war/convoy_security.cpp
    domain/war/interdiction.cpp
    domain/war/siege_effects.cpp
    domain/war/war_scale_scheduler.cpp
    domain/war/war_tasks_engagement.cpp
    domain/war/war_tasks_occupation.cpp
    domain/war/war_tasks_interdiction.cpp
    domain/war/war_system.cpp
    domain/survival/cohort_model.cpp
    domain/survival/needs_model.cpp
    domain/survival/consumption_scheduler.cpp
    domain/survival/survival_production_actions.cpp
    domain/survival/shelter_proxy.cpp
    domain/population/population_refusal_codes.cpp
    domain/population/cohort_types.cpp
    domain/population/demographics.cpp
    domain/population/household_model.cpp
    domain/population/migration_model.cpp
    domain/population/population_scheduler.cpp
    domain/population/population_projections.cpp
    domain/life/reproduction_rules.cpp
    domain/survival/needs_constraints.cpp
)
add_custom_target(game_include_sanity
    COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/scripts/verify_includes_sanity.py
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    COMMENT "Checking include boundaries for game sources"
)
add_dependencies(dominium_game game_include_sanity)
target_include_directories(dominium_game
    PUBLIC
        ${DOMINIUM_GAME_INCLUDE_DIR}
        ${DOMINIUM_RUNTIME_INCLUDE_DIR}
    PRIVATE
        ${DOMINIUM_GENERATED_INCLUDE_DIR}
)
target_link_libraries(dominium_game
    PUBLIC
        domino_engine
)
set_target_properties(dominium_game PROPERTIES
    C_STANDARD 17
    C_STANDARD_REQUIRED ON
    C_EXTENSIONS OFF
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)
add_library(game::dominium ALIAS dominium_game)
