add_subdirectory(control)
add_subdirectory(authority)
add_subdirectory(entitlement)
add_subdirectory(demo)
add_subdirectory(app)
add_subdirectory(tourist)
add_subdirectory(distribution)
add_subdirectory(services)
add_subdirectory(piracy_containment)
add_subdirectory(integration)
add_subdirectory(schema)
add_subdirectory(contract)
add_subdirectory(fab)
