add_subdirectory(control)
add_subdirectory(authority)
add_subdirectory(entitlement)
add_subdirectory(demo)
add_subdirectory(app)
add_subdirectory(tourist)
add_subdirectory(distribution)
add_subdirectory(services)
add_subdirectory(piracy_containment)
add_subdirectory(integration)
add_subdirectory(schema)
add_subdirectory(contract)
add_subdirectory(fab)
add_subdirectory(contentlib)
add_subdirectory(playtest)
add_subdirectory(data_1)
add_subdirectory(coverage)
add_subdirectory(tools)
add_subdirectory(ux)
add_subdirectory(perf)
