add_subdirectory(runtime/control)
add_subdirectory(authority)
add_subdirectory(entitlement)
add_subdirectory(demo)
add_subdirectory(apps)
add_subdirectory(integration/tourist)
add_subdirectory(distribution)
add_subdirectory(contract/service/services_expiry)
add_subdirectory(piracy_containment)
add_subdirectory(integration)
add_subdirectory(contract/schema)
add_subdirectory(contract)
add_subdirectory(invariant)
add_subdirectory(determinism)
add_subdirectory(fab)
add_subdirectory(contentlib)
add_subdirectory(playtest)
add_subdirectory(contract/data1)
add_subdirectory(coverage)
add_subdirectory(tools)
add_subdirectory(ux)
add_subdirectory(runtime/ui/parity)
add_subdirectory(performance)
add_subdirectory(operations)
add_subdirectory(setup)
add_subdirectory(launcher)
add_subdirectory(ai)
add_subdirectory(packaging/share)
add_subdirectory(signal)
add_subdirectory(bugreport)
add_subdirectory(platform)
add_subdirectory(runtime/render)
add_subdirectory(regression)
add_subdirectory(integration/systemic)
